@@ -1,7 +1,6 @@
-package com.kalschatzi;
+package main.java.com.kalschatzi;
 
 import java.util.List;
-import com.google.common.collect.ImmutableList;
 
 public class Main {
     public static void main(String args []) {
@@ -13,7 +12,7 @@ public class Main {
     }
 
     public static String ImmutableListMethod() {
-        List<String> list = ImmutableList.of("A", "B", "C");
+        List<String> list = List.of("A", "B", "C");
         return list.get(0);
     }
 }
